<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <action
        android:id="@+id/action_global_to_home"
        app:destination="@id/navigation_home"
        app:popUpTo="@id/navigation_home"
        app:popUpToInclusive="true"/>

    <action
        android:id="@+id/action_global_to_camera"
        app:destination="@id/navigation_camera" />

    <action
        android:id="@+id/action_global_to_history"
        app:destination="@id/navigation_history"/>

    <action
        android:id="@+id/action_global_to_result"
        app:destination="@id/resultDetailFragment"
        app:enterAnim="@anim/slide_up"
        app:exitAnim="@anim/hold_animation"
        app:popEnterAnim="@anim/hold_animation"
        app:popExitAnim="@anim/slide_down"/>

    <!-- FRAGMENTS -->
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.licky.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home"
        />
    <!-- You can remove the specific actions inside here now -->

    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.example.licky.ui.camera.CameraFragment"
        android:label="Camera"
        tools:layout="@layout/fragment_camera" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.licky.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/resultDetailFragment"
        android:name="com.example.licky.ui.result.ResultDetailFragment"
        android:label="Result Detail"
        tools:layout="@layout/fragment_result_detail" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.licky.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>
